force-app/main/default/objects/Gift_Entry_Settings__c/Gift_Entry_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the NPSP Gift Entry product.</description>
    <label>Gift Entry Settings</label>
</CustomObject>