force-app/main/default/objects/Gift_Entry_Settings__c/fields/Enable_Recurring_Donations_in_Gift_Entry__c.field-meta.xml
<CustomField>
    <fullName>Enable_Recurring_Donations_in_Gift_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Recurring Donations are available in Gift Entry.</description>
    <inlineHelpText>Indicates if Recurring Donations are available in Gift Entry.</inlineHelpText>
    <label>Enable Recurring Donations in Gift Entry</label>
    <type>Checkbox</type>
</CustomField>